--- a/src/jddc-TheWorld/Properties/launchSettings.json
+++ b/src/jddc-TheWorld/Properties/launchSettings.json
@@ -1,5 +1,20 @@
-﻿{
+{
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:8000",
+      "sslPort": 0
+    }
+  },
   "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "jddc_TheWorld": {
       "commandName": "Project",
       "launchBrowser": true,
